--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="main_color">#E60000</color>
     <color name="groups_color">#FCD317</color>
     <color name="groups_text_color">#019F00</color>
-    <color name="main_text_inverted_color">#FFFFFF</color>
+    <color name="main_text_inverted_color">#ffffff</color>
     <color name="main_text_color">#1A1A1A</color>
     <color name="info_text_color">#4D4D4D</color>
     <color name="other_text_color">#808080</color>
