--- a/app/src/main/assets/custom.css
+++ b/app/src/main/assets/custom.css
@@ -292,6 +292,11 @@ img {
 .card, .card * {
     transform: translate3d(0,0,0);
     -webkit-transform: translate3d(0,0,0);
+
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    backface-visibility: hidden;
+    perspective: 1000;
 }
 
 .card {
@@ -313,6 +318,7 @@ img {
     padding: 0.8rem;
     font-weight: 300;
     border-radius: 0 0 2px 2px;
+    text-align: left;
 }
 
 .card p {
@@ -428,6 +434,18 @@ img {
 
 .hidehead.minus {
     background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='50px' width='120px'><text x='0' y='15' fill='black' font-size='20'>-</text></svg>");
+}
+
+.hidewrap .hidehead {
+    overflow:hidden;
+    display:inline-block;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: calc(100% - 20px);
+}
+
+.hidewrap .hidebody {
+    overflow: auto;
 }
 
 #details > tbody > tr:nth-child(odd) {
